; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_super.c_get_tree_keyed.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_super.c_get_tree_keyed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fs_context = type { i8* }
%struct.super_block = type opaque
%struct.super_block.0 = type opaque

@vfs_get_keyed_super = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_tree_keyed(%struct.fs_context* %0, i32 (%struct.super_block*, %struct.fs_context*)* %1, i8* %2) #0 {
  %4 = alloca %struct.fs_context*, align 8
  %5 = alloca i32 (%struct.super_block*, %struct.fs_context*)*, align 8
  %6 = alloca i8*, align 8
  store %struct.fs_context* %0, %struct.fs_context** %4, align 8
  store i32 (%struct.super_block*, %struct.fs_context*)* %1, i32 (%struct.super_block*, %struct.fs_context*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load %struct.fs_context*, %struct.fs_context** %4, align 8
  %9 = getelementptr inbounds %struct.fs_context, %struct.fs_context* %8, i32 0, i32 0
  store i8* %7, i8** %9, align 8
  %10 = load %struct.fs_context*, %struct.fs_context** %4, align 8
  %11 = load i32, i32* @vfs_get_keyed_super, align 4
  %12 = load i32 (%struct.super_block*, %struct.fs_context*)*, i32 (%struct.super_block*, %struct.fs_context*)** %5, align 8
  %13 = bitcast i32 (%struct.super_block*, %struct.fs_context*)* %12 to i32 (%struct.super_block.0*, %struct.fs_context*)*
  %14 = call i32 @vfs_get_super(%struct.fs_context* %10, i32 %11, i32 (%struct.super_block.0*, %struct.fs_context*)* %13)
  ret i32 %14
}

declare dso_local i32 @vfs_get_super(%struct.fs_context*, i32, i32 (%struct.super_block.0*, %struct.fs_context*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
